--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <section class="main-container">
@@ -15,7 +16,7 @@
         <section class="navbar">
             <nav>
                 <div><img src="logo.png" /></div>
-                <div>
+                <div class="nav-ul">
                     <ul>
                         <li>HOME</li>
                         <li>About</li>
@@ -23,6 +24,7 @@
                         <li>Songs</li>
                     </ul>
                 </div>
+                
             </nav>
         </section>
 
